# multi-agent-solver-direct

./: .gitignore  README.md  agents.py  graph.py  kaggle_solver.py  langgraph_solver_plan.md  logging_utils.py  main.py  pyproject.toml  representation_utils.py  runner.py  state.py
